--- a/app/package.json
+++ b/app/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "charlotte-gigs",
+  "name": "boilerplate",
   "version": "0.0.1",
-  "private": true,
+  "author": "Tom Horton <thomasphorton@gmail.com>",
   "scripts": {
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.0.0rc4",
-    "jade": "*",
-    "stylus": "*",
-    "mongoose": "*"
+    "express": "~3.1.1",
+    "connect-timeout": "0.0.1",
+    "stylus": "~0.32.1",
+    "jade": "~0.28.2",
+    "path": "~0.4.9",
+    "mongodb": "1.2.14",
+    "assert": "~0.4.9",
+    "mongoose": "~3.6.4"
   }
 }
