Add some basic design stuff

--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "express": "3.0.0rc4",
     "jade": "*",
     "stylus": "*",
-    "mongoose": "*"
+    "mongoose": "*",
+    "nib": "~0.9.1"
   }
 }
